[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUDMultiplayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://art/gameover.wav" type="AudioStream" id=6]
[ext_resource path="res://LocalMultiplayer.gd" type="Script" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="LocalMultiplayer" type="Node"]
script = ExtResource( 7 )
mob_scene = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.643137, 0.819608, 0.854902, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Player2" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition2" type="Position2D" parent="."]
position = Vector2( 240, 600 )

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 400 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUDMultiplayer" parent="." instance=ExtResource( 3 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="ScoreTimer2" type="Timer" parent="."]

[node name="StartTimer2" type="Timer" parent="."]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player2" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUDMultiplayer" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer2" to="." method="_on_ScoreTimer2_timeout"]
[connection signal="timeout" from="StartTimer2" to="." method="_on_StartTimer2_timeout"]
